finished the css portion of the assignment.  Finished.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-* {
-    text-align: center;
-}
 body {
     margin: 0px;
     padding: 0px;
+}
+@font-face {
+    font-family: ;
+    src: url();
 }
 .root {
     display: flex;
@@ -13,6 +14,12 @@ body {
     display: flex;
     margin:none;
     padding: 20px 0px 100px 0px;
+    text-align: center;
+}
+#logo {
+    padding: 0px;
+    margin: 0px;
+    font-size: 26px;
 }
 #header div {
     flex: 1 1 auto;
@@ -20,22 +27,127 @@ body {
 #introduction {
     display: flex;
     flex-direction: row;
+    padding-bottom: 100px;
+    padding: 0px 150px 100px 100px;
 }
 #introduction div {
     flex: 1 1 auto;
+    text-align: left;
 }
 #introduction h2 {
     margin:0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Hero Main, sans-serif;
     font-weight: bolder;
     font-size: 48px;
     color: #F9FAF8;
+    text-align: left;
+}
+#introduction p {
+    font-size: 20px;
+    font-family: #E5E7EB;
+    font-family: Hero Secondary, sans-serif;
+}
+#text-wrap {
+    width: 70%;
+    text-align: left;
 }
 img {
     width: 600px;
     height: auto;
+    align-items: center;
+
+}
+.signUpBtn {
+    border: none;
+    color: white;
+    background-color: #3882F6;
+    border-radius: 4px;
+    font-family: sans-serif;
+    font-weight: bold;
+    padding: 10px 35px;
 }
 
+#information {
+    margin-top: 30px;
+    text-align: center;
+}
+#information h2 {
+    font-size: 36px;
+    font-weight: bolder;
+}
+#info-cards {
+    display: flex;
+    flex-direction: row;
+    padding: 50px 20px 50px 20px;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+}
+.subtext {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px 20px 0px 20px;
+}
+.subtext p {
+    font-size: 20px;
+}
+.illustration-placeholder {
+    width: 200px;
+    height: 200px;
+    border: 7px solid #3882F6;
+    border-radius: 10px;
+    text-align: center;
+    flex: 1 1 auto;
+}
+.illustration-placeholder img {
+    width: 100%;
+    height: 100%;
+}
+#quote {
+    padding: 100px 200px 100px 200px;
+    background-color: #E5E7EB;
+    font-size: 26px;
+    font-style: italic;
+    color: #1F2937;
+    text-align: center;
+}
+#quote-author {
+    font-weight: bold;
+    font-style: normal;
+    text-align: right;
+}
+#sign-up-body {
+    text-align: left;
+    color: white;
+    padding: 100px 150px 100px 150px;
+}
+#call-to-action-wrapper {
+    background-color: #3882F6;
+    display: flex;
+    flex-direction: row;
+    justify-items: left;
+    padding: 30px 100px 30px 100px;
+    border-radius: 10px;
+    align-items: center;
+}
+#call-to-action-wrapper button {
+    border: 3px solid white;
+    border-radius: 5px;
+}
+#signUpTextWrapper {
+    flex: 1 1 auto;
+}
+#signUpTextWrapper h3 {
+    font-weight: bold;
+    font-size: 26px;
+    margin: 0px;
+}
+#signUpTextWrapper p {
+    margin-bottom: 0px;
+    margin-top: 4px;
+}
 .header-links {
     margin-left: 10px;
     color: white;
@@ -50,8 +162,8 @@ img {
     color: black;
 }
 
-.illustration-placeholder {
-    width: 200px;
-    height: 200px;
-    border: 2px solid #3882F6;
+#footer {
+    padding: 40px 0px 40px 0px;
+    text-align: center;
+    font-size: 16px;
 }
